--- a/capputeeno/src/app/globals.css
+++ b/capputeeno/src/app/globals.css
@@ -1,6 +1,10 @@
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
+  --logo-color:#5D5D6D;
+  --bg-secondary: #f3f5f6;
+  --text-dark: #737380;
+  --delete-color:#DE3838;
   
 }
 
