Feature: create Filter Components

--- a/capputeeno/src/app/globals.css
+++ b/capputeeno/src/app/globals.css
@@ -2,9 +2,11 @@
   --max-width: 1100px;
   --border-radius: 12px;
   --logo-color:#5D5D6D;
+  --orange-low:#FFA585;
   --bg-secondary: #f3f5f6;
   --text-dark: #737380;
   --delete-color:#DE3838;
+  --white:#fff;
   
 }
 
