feat - primary-input

--- a/capputeeno/src/app/globals.css
+++ b/capputeeno/src/app/globals.css
@@ -1,7 +1,9 @@
 :root {
   --max-width: 1100px;
-  
+  --border-radius: 12px;
   --logo-color: #5D5D6D;
+  --bg-secondary: #F3F5F6;
+  --text-dark: #737380;
 }
 
 * {
