feat: :sparkles: create select filter and add useContext in filter-by-type

--- a/capputeeno/src/app/globals.css
+++ b/capputeeno/src/app/globals.css
@@ -1,5 +1,6 @@
 :root {
   --bg-secondary: #f3f5f6;
+  --bg-default: #f0f0f5;
   --text-dark: #737380;
   --color-logo: #5d5d6d;
   --color-delete: #de3838;
