feat: :sparkles: create card product and styled

--- a/capputeeno/src/app/globals.css
+++ b/capputeeno/src/app/globals.css
@@ -2,6 +2,9 @@
   --bg-secondary: #f3f5f6;
   --bg-default: #f0f0f5;
   --text-dark: #737380;
+  --text-darker: #41414d;
+  --shapes-dark: #09090a;
+  --shapes-2: #dce2e5;
   --color-logo: #5d5d6d;
   --color-delete: #de3838;
   --color-orange-low: #ffa585;
